--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.11.1",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
@@ -63,7 +65,6 @@
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
-    "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
@@ -131,6 +132,7 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.2"
+    "eslint-loader": "^2.1.2",
+    "webpack-dev-server": "^3.2.1"
   }
 }
