--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "0.5.0",
+    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -52,6 +53,7 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.11.1",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
@@ -66,8 +68,10 @@
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.2.0"
+    "workbox-webpack-plugin": "4.2.0",
+    "xss": "^1.0.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
